pre retry command

--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -7,12 +7,10 @@ jobs:
   success :
     runs-on : ubuntu-latest
     steps :
-      - name: test
-        uses: Wandalen/wretry.action@v3.6.0
+      - name: pre retry
+        uses: 'Wandalen/wretry.action/main@v3'
         with:
-          action: docker/login-action@v3
-          with: |
-            username: ${{ secrets.DOCKER_NAME }}
-            password: ${{ secrets.DOCKER_TOKEN }}
-          attempt_limit: 3
-          attempt_delay: 10000
+          command: 'echo Executing ${{ runner.temp }}/innosetup-6.3.3.exe && false'
+          pre_retry_command: 'echo Reexecuting ${{ runner.temp }}/innosetup-6.3.3.exe'
+          attempt_limit: '3'
+          attempt_delay: '1000'
