--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -7,6 +7,7 @@ jobs:
   success :
     runs-on : ubuntu-latest
     steps :
+      - uses : actions/checkout@v4
       - uses: 'dmvict/wretry.action@exp'
         with:
           action: ./github/actions
