--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -10,6 +10,6 @@ jobs:
       - uses : actions/checkout@v4
       - uses: 'Wandalen/wretry.action@v3.8.0'
         with:
-          action: ./.github/actions
+          action: dmvict/test.action@pre 
           attempt_limit: 4
           attempt_delay: 1000
